Fix dark mode for note detail view

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -15,6 +15,8 @@
 }
 
 body {
+  background: var(--color-bg);
+  color: var(--color-text);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.75;
@@ -32,7 +34,7 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
-  .Section--content {
+  body {
     --color-bg: var(--color-dark-bg2);
     --color-bg-code: var(--color-dark-bg-code);
     --color-text: var(--color-dark-text);
